[gd_scene load_steps=17 format=2]

[ext_resource path="res://menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/pause_menu_buttons/option-OFF.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/pause_menu_buttons/option-ON.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/pause_menu_buttons/rope.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/pause_menu_buttons/resume-OFF.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/pause_menu_buttons/stick.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/pause_menu_buttons/resume-ON.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/pause_menu_buttons/exit-OFF.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/pause_menu_buttons/exit-ON.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/volume.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/grey_pause_filter.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/volume_handle.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 13, 8, 83, 98 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScreenDimEffect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.2 )

[node name="Textures" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dimmer" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true

[node name="ExitOff" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="ExitOn" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="ResumeOff" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="ResumeOn" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="OptionOff" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="OptionOn" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Stick" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Rope" type="TextureRect" parent="Textures"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="MenuButtons" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 409.6
margin_top = 240.0
margin_right = 613.6
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resume" type="Button" parent="MenuButtons"]
margin_left = -36.0
margin_top = -108.0
margin_right = 287.0
margin_bottom = -9.0
text = "Resume"

[node name="Option" type="Button" parent="MenuButtons"]
margin_left = -32.0
margin_top = 17.0
margin_right = 300.0
margin_bottom = 122.0
text = "Option"

[node name="Exit" type="Button" parent="MenuButtons"]
margin_left = -19.0
margin_top = 156.0
margin_right = 295.0
margin_bottom = 257.0
text = "Exit"

[node name="OptionMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="OptionMenu"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VolumeSlider" type="HSlider" parent="OptionMenu"]
margin_left = 392.0
margin_top = 332.0
margin_right = 740.0
margin_bottom = 430.0
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/grabber_highlight = SubResource( 2 )
custom_icons/grabber = SubResource( 2 )
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
value = 20.0
